# Mython

./: .gitignore  README.md  example.ps  lexer.py  main.py  parser.py  pyproject.toml  translator.py
packaging/aur/: README.md
packaging/aur/mython/: .SRCINFO  PKGBUILD
packaging/aur/mython-git/: .SRCINFO  PKGBUILD
vscode-mython/: README.md  package.json
vscode-mython/syntaxes/: mython.tmLanguage.json
