[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mython-lang"
version = "0.1.0"
description = "Mython: polska nakladka na Pythona"
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
mython = "main:main"

[tool.setuptools]
py-modules = ["main", "translator", "parser", "lexer"]
